[gd_scene load_steps=3 format=3 uid="uid://c3t25jf77014j"]

[ext_resource type="Texture2D" uid="uid://c2jyv58nsm15a" path="res://ressources/images/goat.png" id="1_n7nyl"]
[ext_resource type="Script" path="res://scripts/skill_select.gd" id="1_xumfo"]

[node name="SkillSelect" type="ColorRect"]
offset_top = 512.0
offset_right = 1280.0
offset_bottom = 656.0
color = Color(0, 0, 0, 0)
script = ExtResource("1_xumfo")

[node name="Skill1" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.469
anchor_bottom = 0.5
offset_right = -0.320007
offset_bottom = -8.0
text = "-"

[node name="TextureRect" type="TextureRect" parent="Skill1"]
layout_mode = 0
offset_left = 43.0
offset_top = 6.0
offset_right = 324.0
offset_bottom = 278.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_n7nyl")

[node name="Skill2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.556
anchor_right = 0.469
anchor_bottom = 1.0
offset_top = -0.0640106
offset_right = -0.320007
text = "-"

[node name="TextureRect" type="TextureRect" parent="Skill2"]
layout_mode = 0
offset_left = 43.0
offset_top = 6.0
offset_right = 324.0
offset_bottom = 278.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_n7nyl")

[node name="Skill3" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.481
anchor_right = 0.95
anchor_bottom = 0.444
offset_left = 0.319946
offset_bottom = 0.0639954
text = "-"

[node name="TextureRect" type="TextureRect" parent="Skill3"]
layout_mode = 0
offset_left = 43.0
offset_top = 6.0
offset_right = 324.0
offset_bottom = 278.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_n7nyl")

[node name="Skill4" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.481
anchor_top = 0.556
anchor_right = 0.95
anchor_bottom = 1.0
offset_left = 0.319946
offset_top = -0.0640106
text = "-"

[node name="TextureRect" type="TextureRect" parent="Skill4"]
layout_mode = 0
offset_left = 43.0
offset_top = 6.0
offset_right = 324.0
offset_bottom = 278.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_n7nyl")

[node name="DescriptionLeft" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 503.0
offset_bottom = 145.0
color = Color(0.237539, 0.237539, 0.237539, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="DescriptionLeft"]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 488.0
offset_bottom = 129.0
tab_size = 12
context_menu_enabled = true

[node name="DescriptionRight" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 514.0
offset_top = 8.0
offset_right = 979.0
offset_bottom = 145.0
color = Color(0.237539, 0.237539, 0.237539, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="DescriptionRight"]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 458.0
offset_bottom = 129.0
tab_size = 12
context_menu_enabled = true

[connection signal="mouse_entered" from="Skill1" to="." method="_on_skill_1_mouse_entered"]
[connection signal="mouse_exited" from="Skill1" to="." method="_on_skill_1_mouse_exited"]
[connection signal="mouse_entered" from="Skill2" to="." method="_on_skill_2_mouse_entered"]
[connection signal="mouse_exited" from="Skill2" to="." method="_on_skill_2_mouse_exited"]
[connection signal="mouse_entered" from="Skill3" to="." method="_on_skill_3_mouse_entered"]
[connection signal="mouse_exited" from="Skill3" to="." method="_on_skill_3_mouse_exited"]
[connection signal="mouse_entered" from="Skill4" to="." method="_on_skill_4_mouse_entered"]
[connection signal="mouse_exited" from="Skill4" to="." method="_on_skill_4_mouse_exited"]
